[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.*"
futures = "0.3.*"
indexmap = { version = "1.8.*", features = ["serde"] }
itertools = "0.10.*"
patch-db = { version = "*", path = "../../patch-db/patch-db", features = [
  "trace",
] }
rand = "0.7.*"
regex = "1.5.*"
rpc-toolkit = { version = "*", path = "../../rpc-toolkit/rpc-toolkit" }
serde = { version = "1.0.*", features = ["derive", "rc"] }
serde_json = "1.0.*"
tracing = "0.1"