[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy_container_init = { path = "../embassy-container-init" }
emver = { version = "0.1", git = "https://github.com/Start9Labs/emver-rs.git", features = [
  "serde",
] }
patch-db = { version = "*", path = "../../patch-db/patch-db", features = [
  "trace",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
