[package]
name = "start-registry"
version = "1.0.0" # VERSION_BUMP
edition = "2024"
license = "MIT"
repository = "https://github.com/Start9Labs/start-technologies"

[[bin]]
name = "registrybox"
path = "src/main.rs"

[features]
default = []
beta = ["start-core/beta"]
console = ["start-core/console"]
dev = ["start-core/dev"]
test = ["start-core/test"]
unstable = ["start-core/unstable"]

[dependencies]
start-core = { path = "../../shared-libs/crates/start-core" }
