[package]
name = "uciedit"
version = "0.1.0"
edition = "2021"

[dependencies]
inpt = "0.1.5"
fd-lock-rs = "0.1.4"
bumpalo = "3.17"
typed-arena = "2.0.2"
uciedit_macros = { path = "../uciedit_macros" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde", "std"] }
tokio = { version = "1", features = ["fs", "io-util", "rt"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
